--- a/.env.setting
+++ b/.env.setting
@@ -2,5 +2,5 @@ VIDEO_DIR=data/00_video
 AUDIO_DIR=data/01_audio
 TRANS_DIR=data/02_trans
 JSON_DIR=data/03_json
-CSV_DIR=data/04_csv
+DSV_DIR=data/04_dsv
 FINISH_DIR=data/finish
