--- a/.env.setting
+++ b/.env.setting
@@ -4,3 +4,5 @@ TRANS_DIR=data/02_trans
 JSON_DIR=data/03_json
 DSV_DIR=data/04_dsv
 FINISH_DIR=data/finish
+DSV_MODE=overwrite # overwrite / log / modify_only
+DSV_OUTPUT_FORMAT=tsv # tsv / csv
