--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,7 @@ credentials.json
 
 
 bk/
-data/00_video/*
-data/01_audio/*
-data/02_trans/*
-data/03_json/*
-data/04_dsv/*
-data/finish/*
+data/*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
